@@ -1,3 +1,6 @@
+---------1.7-------------
+1.删除没必要方法
+2.analyzer 添加 LowerCaseFilter
 ---------1.7-beta--------
 1.要比较的词不从 char[] sen 里复制,直接与词库结构比较, 性能提升10% 
 2.用 key tree 的词库数据结构, 性能提升不少
